fix: show search icon on mobile by moving it outside desktop-only container

--- a/website/src/components/Header/Header.module.scss
+++ b/website/src/components/Header/Header.module.scss
@@ -195,15 +195,6 @@
   }
 }
 
-.header__icons {
-  align-items: center;
-  display: none;
-  gap: 16px;
-
-  @media (min-width: $bp-lg) {
-    display: flex;
-  }
-}
 
 .header__divider {
   background: rgba(255, 255, 255, 0.3);
